October 30 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Item strength values are now somewhat more balanced
	* A few gcc warnings corrected
	* Many devirtualizations
	* Kahvi's sign pic now uses only two m-colors, one for the text and another for the rest
	* Optimized contentscript instantiations by removing the older optimizations that slowed
	  them down
	* Most inventory initializations are now script's responsibilities
	* Armor breaks again
	* Block capacity algorithm remade
	* Added script support for random squares inside rooms

October 29 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* fixed bug: (In Linux) push X-button, then cancel
	* magical whistle now acts as a normal whistle if used less than 1000 ticks after last use.
	* Smith added in Attnam
	* Spoiler warnings to all script files added
	* Snake corpses are poisones
	* sign (says "under construction" and IS under construction)

October 29 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* The extremely uninformative battle information of the panel removed
	* Added show battle info command ('B') which reveals them instead
	* Item pictures are now shown when looking at people
	* Worldmap generation is now faster
	* Added armor of great health which increases endurance but is heavier, clumsier
	  and weaker than plate mail
	* Invisible monsters seen by infravision are again transparent
	* Generation modifiers are no longer calculated for monsters that can't be generated
	* Game balancing:
	  * Body armor now increases head's AV somewhat (let's say it protects the neck)
	  * Body armor's effect on limb AVs increased (now 3/4)
	  * Damage needed for breaking items doubled
	* New script features:
	  * Items can now be added to character inventories both in dungeon.dat and char.dat
	  * Items can be added to the ground much more conveniently
	  * Chest contents can be defined in the script (even chests inside chests inside chests
	    and so on are possible)