@@ -360,3 +360,5 @@ Scoll of harden material.
 Broken bananas should spoil faster than intact ones.
 Wand of resurrection shouldn't work on golem corpses.
 Lookmode should show whether a creature is panicked.
+"Entering level number 2" in Elpuri's cave should read "Entering Elpuri's cave level number 2"
+Coconuts falling from palms
